--- a/empleados/src/main/resources/templates/areaPersonal.html
+++ b/empleados/src/main/resources/templates/areaPersonal.html
@@ -7,7 +7,7 @@
 </head>
 <body class="area-personal">
 <div class="container">
-    <h1><span class="etiqueta">Área personal:</span> <span class="usuario" th:text="${email}"></span></h1>
+    <h1><span class="etiqueta">Área personal de:</span> <span class="usuario" th:text="${email}"></span></h1>
 
     <section class="bloque">
         <h2>Contadores de Autenticación</h2>
@@ -28,22 +28,23 @@
         <h2>Información del Cliente Actual</h2>
         <p><strong>Navegador (User-Agent):</strong> <span th:text="${navegadorActual}"></span></p>
     </section>
-<div class="card-body text-center">
-    <h5 class="card-title">Consultar Productos</h5>
-    <p class="card-text">Busca y filtra productos en el catálogo.</p>
-    <a th:href="@{/empleados/consulta-productos}" class="btn btn-info">Ir a Consulta de Productos</a>
-</div>
 
-    <section class="bloque">
-        <h2>Información del Cliente Actual</h2>
-        <p><strong>Navegador (User-Agent):</strong> <span th:text="${navegadorActual}"></span></p>
-    </section>
+    <hr>
+
+    <div class="card-body text-center">
+        <h5 class="card-title">Consultar Productos</h5>
+    <!--    <p >Busca y filtra productos en el catálogo.</p>-->
+        <a class="boton" th:href="@{/empleados/consulta-productos}" >Ir a Consulta de Productos</a>
+    </div>
 
     <hr>
 
     <div class="acciones">
         <a class="boton" th:href="@{/empleados/registro-datos}">Ir a Registro de Empleado</a>
-        <a class="boton secundario" th:href="@{/usuarios/logout}">Cerrar sesión</a>
     </div>
+
+    <hr>
+
+        <a class="boton secundario" th:href="@{/usuarios/logout}">Cerrar sesión</a>
 </div>
 </body></html>
