--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -23,11 +23,11 @@
     <h2>Empleado</h2>
     <p th:text="'Nombre: ' + *{nombreDTO}"></p>
     <p th:text="'Apellidos: ' + *{apellidosDTO}"></p>
-    <p th:text="'Género: ' + *{generoSeleccionadoDTO.nombreGenero}"></p>
+    <p th:text="'Género: ' + *{generoSeleccionadoDTO.codigoGenero}"></p>
     <p th:text="'Fotografia: ' + *{fotografiaDTO}"></p>
-    <p th:text="'Fecha de nacimiento: ' + *{fechaNacimientoDTO}"></p>
+    <p th:text="${'Fecha de nacimiento: ' + #temporals.format(datos.fechaNacimientoDTO, 'dd/MM/yyyy')}"></p>
     <p th:text="'Edad: ' + *{edadDTO}"></p>
-    <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento.nombrePaisDTO}"></p>
+    <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento.codigoPaisDTO}"></p>
     <p th:text="'Comentarios: ' + *{comentarios}"></p>
 
     <h2>Documentos Personales</h2>
@@ -39,6 +39,7 @@
     <p th:text="'Tipo de vía: ' + *{direccionDTO.tipoViaDireccionPpalDTO.tipoVia}"></p>
     <p th:text="'Nombre de vía: ' + *{direccionDTO.nombreViaDireccionPpalDTO}"></p>
     <p th:text="'Número de vía: ' + *{direccionDTO.numeroViaDireccionPpalDTO}"></p>
+    <p th:text="'Portal: ' + *{direccionDTO.portalDireccionPpalDTO}"></p>
     <p th:text="'Planta: ' + *{direccionDTO.plantaDireccionPpalDTO}"></p>
     <p th:text="'Puerta: ' + *{direccionDTO.puertaDireccionPpalDTO}"></p>
     <p th:text="'Localidad: ' + *{direccionDTO.localidadDireccionPpalDTO}"></p>
@@ -46,8 +47,14 @@
     <p th:text="'Región: ' + *{direccionDTO.regionDireccionPpalDTO}"></p>
 
     <h2>Departamentos Y Especialidades</h2>
-    <p th:text="'Departamento: ' + *{departamentoDTO.nombreDept}"></p>
-    <p th:text="'Especialidades: ' + *{especialidadesSeleccionadasDTO}"></p>
+    <p th:text="'Departamento: ' + *{departamentoDTO.id}"></p>
+
+    <p>Especialidades seleccionadas:</p>
+    <div th:each="e : *{especialidadesSeleccionadasDTO}">
+        <div th:if="${e.seleccionada}"
+        th:text="${e.nombreEspecialidad}"></div>
+    </div>
+
 
     <h2>Datos Financieros</h2>
     <p th:text="'Banco: ' + *{cuentaCorrienteDTO.entidadBancaria.nombreEntidadDTO}"></p>
@@ -62,6 +69,8 @@
     + ' Año:' + *{tarjetasCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
     <p th:text="'CVC: ' + *{tarjetasCreditoDTO.cvcDTO}"></p>
 
+    <hr>
+
     <span style="color:red">&#8226;</span> <label for="aceptaInformacionDTO" th:text="#{Validacion.Consentimiento.true}"></label>
     <input type="checkbox"
             th:field="*{aceptaInformacionDTO}"
@@ -69,15 +78,19 @@
     <div th:if="${#fields.hasErrors('aceptaInformacionDTO')}"
          th:errors="*{aceptaInformacionDTO}" class="error"></div>
 
-    <br>
 
-    <div>
+    <hr>
+
+    <div class="btn-form">
         <input type="submit" th:value="#{Boton.guardar}">
     </div>
 
 </form>
 <!--<a th:href="@{/empleados/logout}" class="btn">Volver al inicio</a>-->
-
+<!-- Script que muestra el alert si mostrarAlerta es true -->
+<script th:if="${mostrarAlerta}">
+    alert([[${mensaje}]]);  // Muestra el mensaje del controlador
+</script>
 <script th:src="@{/js/script.js}"></script>
 
 </body>
