--- a/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
@@ -125,18 +125,20 @@
          th:errors="*{direccionDTO.codigoPostalDireccionPpalDTO}" class="error"></div>
     <br><br>
 
-    <input type="button"
-           th:value="#{Boton.resetear}"
-           onclick="resetFormulario()">
-    <br><br>
+    <div class="btn-form">
+        <input type="button"
+               th:value="#{Boton.resetear}"
+               onclick="resetFormulario()">
+        <br><br>
 
-    <input type="button"
-           th:value="#{Boton.vaciar}"
-           onclick="vaciarFormulario()">
-    <br><br>
+        <input type="button"
+               th:value="#{Boton.vaciar}"
+               onclick="vaciarFormulario()">
+        <br><br>
 
-    <input type="submit"
-           th:value="#{Boton.siguiente}">
+        <input type="submit"
+               th:value="#{Boton.siguiente}">
+    </div>
 </form>
 
 <script th:src="@{/js/script.js}"></script>
