--- a/empleados/src/main/resources/templates/registro.html
+++ b/empleados/src/main/resources/templates/registro.html
@@ -23,7 +23,7 @@
             border-radius: 5px;
             padding: 40px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
+            max-width: 700px;
             text-align: center;
         }
 
@@ -60,52 +60,60 @@
             margin: 10px 0;
         }
 
+        .success-message{
+            margin: 10px 0;
+            color: green;
+        }
+
         .user-agent-info {
             font-size: 12px;
             color: #666;
             margin-top: 15px;
         }
+
     </style>
 </head>
 
 <body>
+<div class="container">
+    <!-- Se muestra un mensaje de éxito si lo hay -->
+    <div th:if="${param.success}" class="success-message">
+        <p style="color: green;">¡Registro exitoso!</p>
+    </div>
 
-<!-- Se muestra un mensaje de éxito si lo hay -->
-<div th:if="${param.success}">
-    <p style="color: green;">¡Registro exitoso!</p>
+    <!-- Se muestra un mensaje de error si lo hay -->
+    <div th:if="${error != null}">
+        <p class="error-message" th:text="${error}"></p>
+    </div>
+
+
+    <!-- El formulario usa el objeto 'usuarioRegistroDTO' para hacer binding de sus campos -->
+    <form th:action="@{/usuarios/registro}" th:object="${usuarioRegistroDTO}" method="post"
+          onsubmit="return confirmarAccionFormulario(this, '¿Estás seguro de que deseas registrar este nuevo usuario?');">
+        <h1>Registro de Usuario</h1>
+
+        <div>
+            <label for="email">Email</label>
+            <input type="email" th:field="*{email}" id="email" placeholder="tuemail@dominio.com" />
+            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error"></div>
+        </div>
+        <div>
+            <label for="contrasena">Contraseña</label>
+            <input type="password" th:field="*{contrasena}" id="contrasena" />
+            <div th:if="${#fields.hasErrors('contrasena')}" th:errors="*{contrasena}" class="error"></div>
+        </div>
+        <div>
+            <label for="confirmarContrasena">Confirmar Contraseña</label>
+            <input type="password" id="confirmarContrasena" name="confirmarContrasena" required/>
+            <div th:if="${#fields.hasErrors('confirmarContrasena')}" th:errors="*{confirmarContrasena}" class="error"></div>
+        </div>
+        <div>
+            <button type="submit">Registrarse</button>
+            <button><a th:href="@{/usuarios/inicio-sesion}" style="color: black; text-decoration: none">Iniciar Sesión</a></button>
+        </div>
+    </form>
 </div>
 
-<!-- Se muestra un mensaje de error si lo hay -->
-<div th:if="${error != null}">
-    <p style="color: red;" th:text="${error}"></p>
-</div>
-
-
-<!-- El formulario usa el objeto 'usuarioRegistroDTO' para hacer binding de sus campos -->
-<form th:action="@{/usuarios/registro}" th:object="${usuarioRegistroDTO}" method="post"
-      onsubmit="return confirmarAccionFormulario(this, '¿Estás seguro de que deseas registrar este nuevo usuario?');">
-    <h1>Registro de Usuario</h1>
-
-    <div>
-        <label for="email">Email</label>
-        <input type="email" th:field="*{email}" id="email" placeholder="tuemail@dominio.com" />
-        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error"></div>
-    </div>
-    <div>
-        <label for="contrasena">Contraseña</label>
-        <input type="password" th:field="*{contrasena}" id="contrasena" />
-        <div th:if="${#fields.hasErrors('contrasena')}" th:errors="*{contrasena}" class="error"></div>
-    </div>
-    <div>
-        <label for="confirmarContrasena">Confirmar Contraseña</label>
-        <input type="password" id="confirmarContrasena" name="confirmarContrasena" required/>
-        <div th:if="${#fields.hasErrors('confirmarContrasena')}" th:errors="*{confirmarContrasena}" class="error"></div>
-    </div>
-    <div>
-        <button type="submit">Registrarse</button>
-        <button><a th:href="@{/usuarios/inicio-sesion}" style="color: black; text-decoration: none">Iniciar Sesión</a></button>
-    </div>
-</form>
 </body>
 <script th:src="@{/js/script.js}"></script>
 </html>
