--- a/administracion/src/main/resources/templates/edicion-empleado.html
+++ b/administracion/src/main/resources/templates/edicion-empleado.html
@@ -59,7 +59,7 @@
     <input type="text" th:field="*{edad}" id="edad" min="18" required/>
 
     <label for="numeroDocumento">DNI</label>
-    <input type="text" th:field="*{numeroDni}" id="numeroDocumento" required/>
+    <input type="text" th:field="*{numeroDni}" id="numeroDocumento" />
 
     <label for="departamentoId">Departamento</label>
     <select th:field="*{nombreDepartamento}" id="departamentoId" required>
@@ -70,15 +70,15 @@
 
     <button type="submit">Guardar cambios</button>
 
-    <div th:if="${#fields.hasErrors('nombre')}" class="error">
-        <p th:errors="*{nombre}">Nombre es obligatorio.</p>
-    </div>
-    <div th:if="${#fields.hasErrors('apellido')}" class="error">
-        <p th:errors="*{apellido}">Apellidos son obligatorios.</p>
-    </div>
-    <div th:if="${#fields.hasErrors('edad')}" class="error">
-        <p th:errors="*{edad}">Edad debe ser un número válido mayor de 18.</p>
-    </div>
+<!--    <div th:if="${#fields.hasErrors('nombre')}" class="error">-->
+<!--        <p th:errors="*{nombre}">Nombre es obligatorio.</p>-->
+<!--    </div>-->
+<!--    <div th:if="${#fields.hasErrors('apellido')}" class="error">-->
+<!--        <p th:errors="*{apellido}">Apellidos son obligatorios.</p>-->
+<!--    </div>-->
+<!--    <div th:if="${#fields.hasErrors('edad')}" class="error">-->
+<!--        <p th:errors="*{edad}">Edad debe ser un número válido mayor de 18.</p>-->
+<!--    </div>-->
 </form>
 
 </body>
