add: Baja y alta de empleados
- Añadida la baja y alta de empleados en el modulo de administracion
- Añadidos botones para mostrar contraseña

(#45, #46)

--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -30,6 +30,8 @@
 
         <a class="boton" th:href="@{/administrador/consulta-empleado}">Consulta de Empleados</a>
 
+        <a class="boton" th:href="@{/administrador/gestion-estado-empleados}">Alta y baja de empleados</a>
+
         <a class="boton" th:href="@{/administrador/nominas/consultar}">Gestion de nominas</a>
 
     </div>
